<resources>
    <string name="app_name">GymLog</string>
    <string name="title_create_exercise">Create exercise</string>
    <string name="title_create_variation">Create variation</string>
    <string name="title_create_weight_period">Create weight period</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_history">History</string>
    <string name="title_latest">Latest exercises</string>
    <string name="title_list_weight_period">List weight periods</string>
    <string name="title_registry">Registry</string>
    <string name="title_select_gym">Select Current Gym</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_stats">Stats</string>
    <string name="title_weight_period">Weight Period</string>
    <string name="title_workout">Workout</string>
    <string name="title_top_records">Top Records</string>
    <string name="title_training">Training</string>
    <string name="title_view_details">View details</string>
    <string name="group_abdominals">Abdominals</string>
    <string name="group_biceps">Biceps</string>
    <string name="group_calves">Calves</string>
    <string name="group_cardio">Cardio</string>
    <string name="group_deltoid">Shoulders</string>
    <string name="group_forearm">Forearm</string>
    <string name="group_glutes">Glutes</string>
    <string name="group_hamstrings">Hamstrings</string>
    <string name="group_lower_back">Lower Back</string>
    <string name="group_pectoral">Chest</string>
    <string name="group_quadriceps">Quadriceps</string>
    <string name="group_trapezius">Trapezius</string>
    <string name="group_triceps">Triceps</string>
    <string name="group_upper_back">Back</string>
    <string name="group_short_abdominals">Abs</string>
    <string name="group_short_biceps">Biceps</string>
    <string name="group_short_calves">Calves</string>
    <string name="group_short_cardio">Cardio</string>
    <string name="group_short_deltoid">Shoulders</string>
    <string name="group_short_forearm">Forearm</string>
    <string name="group_short_glutes">Glutes</string>
    <string name="group_short_hamstrings">Hams</string>
    <string name="group_short_lower_back">Lower Back</string>
    <string name="group_short_pectoral">Chest</string>
    <string name="group_short_quadriceps">Quads</string>
    <string name="group_short_trapezius">Traps</string>
    <string name="group_short_triceps">Triceps</string>
    <string name="group_short_upper_back">Back</string>
    <string name="compound_training_start_date">Training #%1$d started at %2$s</string>
    <string name="compound_training_date">Training #%1$d on %2$s</string>
    <string name="compound_training_duration">Training #%1$d. %2$s duration</string>
    <string name="compound_notification_countdown">Countdown: %1$ds</string>
    <string name="compound_training_times">%1$s - %2$s (%3$s)</string>
    <string name="compound_training_times_ongoing">%1$s - <i>ongoing</i></string>
    <string name="text_active_superset">Active Superset #%1$d</string>
    <string name="text_add">Add</string>
    <string name="text_add_modification">Add modification</string>
    <string name="text_collapse_all">Collapse all</string>
    <string name="text_countdown">Countdown</string>
    <string name="text_current_countdown">Current countdown</string>
    <string name="text_default">Default</string>
    <string name="text_dropbox_export">Export to Dropbox</string>
    <string name="text_exercise">Exercise</string>
    <string name="text_expand_all">Expand all</string>
    <string name="text_export">Export</string>
    <string name="text_find_top_records">Find top records</string>
    <string name="text_from">From</string>
    <string name="text_gym">Gym</string>
    <string name="text_import">Import</string>
    <string name="text_instantly">Instantly</string>
    <string name="text_kg">kg</string>
    <string name="text_lb">lbs</string>
    <string name="text_no">No</string>
    <string name="text_no_bar">No bar</string>
    <string name="text_none">None</string>
    <string name="text_notes">Notes</string>
    <string name="text_open">Open</string>
    <string name="text_period_from">Period from</string>
    <string name="text_reps">Reps</string>
    <string name="text_reps_lowercase">reps</string>
    <string name="text_seconds">Seconds</string>
    <string name="text_set">Set</string>
    <string name="text_show_all_gyms">Show all gyms data</string>
    <string name="text_show_totals">Show total weight</string>
    <string name="text_subtitle">Subtitle</string>
    <string name="text_superset">Superset</string>
    <string name="text_test">-TEST-</string>
    <string name="text_time">Time</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="text_title">Title</string>
    <string name="text_to">to</string>
    <string name="text_variations">Variations</string>
    <string name="text_view_all_weight_periods">View all weight periods</string>
    <string name="text_warm_up">Warm up</string>
    <string name="text_weight">Weight</string>
    <string name="text_yes">Yes</string>
    <string name="text_yyyymmdd">yyyy-mm-dd</string>
    <string name="type_none">None</string>
    <string name="type_dumbbell">Dumbbell</string>
    <string name="type_barbell">Barbell</string>
    <string name="type_plate">Plate</string>
    <string name="type_pulley">Pulley Machine</string>
    <string name="type_smith">Smith Machine</string>
    <string name="type_machine">Machine</string>
    <string name="type_cardio">Cardio</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_last_used">Sort by last used</string>
    <string name="dialog_confirm_training_title">Confirm ending training</string>
    <string name="dialog_confirm_training_text">Are you sure you finished your current training?</string>
    <string name="dialog_edit_log">Edit log</string>
    <string name="dialog_edit_exercise">Edit exercise</string>
    <string name="dialog_write_new_gym">Write the name of the new Gym</string>
    <string name="dialog_remove_log">Remove log</string>
    <string name="dialog_remove_exercise">Remove exercise</string>
    <string name="dialog_remove_weight_period">Remove weight period</string>
    <string name="dialog_remove_weight_period_modification">Remove modification</string>
    <string name="dialog_confirm_remove_exercise_title">Removing exercise</string>
    <string name="dialog_confirm_remove_exercise_text">This process wil remove this exercise.
    All its history will be removed as well. Do you want to proceed?</string>
    <string name="dialog_confirm_remove_log_title">Removing log entry</string>
    <string name="dialog_confirm_remove_log_text">Are you sure you want to remove this log entry?</string>
    <string name="dialog_confirm_remove_weight_period_title">Removing weight period</string>
    <string name="dialog_confirm_remove_weight_period_text">This process wil remove this weight period.
    Do you want to proceed?</string>
    <string name="dialog_confirm_init_training_title">Training not started</string>
    <string name="dialog_confirm_init_training_text">There is no training currently ongoing.
    Do you want to start training #%1$d?</string>
    <string name="dialog_confirm_import_title">Import data</string>
    <string name="dialog_confirm_import_text">The App data is empty. Import data from file?
    Default data will be used otherwise.</string>
    <string name="dialog_title_select_month">Select month</string>
    <string name="dialog_title_select_time">Select time</string>
    <string name="dialog_show_bit_training">Show complete training</string>
    <string name="dialog_gym_no_relation">No related to any specific gym and registry is shared</string>
    <string name="dialog_gym_individual_relation">No related to any specific gym but registry is not shared</string>
    <string name="dialog_gym_strict_relation">Only available for the current selected gym</string>
    <string name="form_gym_no_relation">No related to any specific gym</string>
    <string name="form_gym_individual_relation">Not shared between gyms</string>
    <string name="form_gym_strict_relation">Related to current gym</string>
    <string name="symbol_2_dots">:</string>
    <string name="symbol_3_middle_points">···</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_bar">/</string>
    <string name="symbol_empty"/>
    <string name="symbol_hash">&#35;</string>
    <string name="symbol_is_space">:&#160;</string>
    <string name="symbol_hyphen">-</string>
    <string name="symbol_s">s</string>
    <string name="symbol_space">&#160;</string>
    <string name="symbol_zero">0</string>
    <string name="symbol_zero_dot_2zero">0.00</string>
    <string name="support_open_parentheses">(</string>
    <string name="support_close_parentheses">)</string>
    <string name="support_step_2">Step:&#160;</string>
    <string name="support_bar_2">Bar:&#160;</string>
    <string name="support_input_type_2">Input type:&#160;</string>
    <string name="support_total_weight_2">Total weight:&#160;</string>
    <string name="button_confirm">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clone">Clone</string>
    <string name="form_bar_value">Requires setting a bar</string>
    <string name="form_create_variation">Create variation</string>
    <string name="form_edit_training">Edit training</string>
    <string name="form_edit_variations">Edit variations</string>
    <string name="form_edit_weight_period">Edit weight period</string>
    <string name="form_edit_weight_period_modification">Edit modification</string>
    <string name="form_end_date">End date</string>
    <string name="form_end_training">End Training</string>
    <string name="form_expected_muscle_gain">Expected muscle gain</string>
    <string name="form_gain_per_week">Gain per week</string>
    <string name="form_gym_independent">Share registry with all gyms?</string>
    <string name="form_image">Image</string>
    <string name="form_loss_per_week">Loss per week</string>
    <string name="form_name">Name</string>
    <string name="form_no_bar_value">Doesn\'t require setting a bar</string>
    <string name="form_primary_muscles">Primary Muscular Groups</string>
    <string name="form_requires_bar">Requires Bar</string>
    <string name="form_secondary_muscles">Secondary Muscular Groups</string>
    <string name="day_monday_short">Mon</string>
    <string name="day_tuesday_short">Tue</string>
    <string name="day_wednesday_short">Wed</string>
    <string name="day_thursday_short">Thu</string>
    <string name="day_friday_short">Fri</string>
    <string name="day_saturday_short">Sat</string>
    <string name="day_sunday_short">Sun</string>
    <string name="month_january">January</string>
    <string name="default_header">Default</string>
    <string name="default_rest_time">Default rest time</string>
    <string name="units_header">Units</string>
    <string name="customization_header">Customization</string>
    <string name="permissions_header">Deletion permissions</string>
    <string name="international_system_title">Use international system units</string>
    <string name="international_system_on">Currently using kgs by default</string>
    <string name="international_system_off">Currently using lbs by default</string>
    <string name="exact_value_title">Exact value conversion</string>
    <string name="value_step_title">Conversion step value</string>
    <string name="night_theme_title">Use night theme</string>
    <string name="exercise_sorting_title">Default exercises sorting</string>
    <string name="training_bits_sorting_title">Training sorting</string>
    <string name="ability_remove_logs">Ability to remove logs</string>
    <string name="ability_remove_exercises">Ability to remove exercises</string>
</resources>