<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/default_header">
        <EditTextPreference
            app:key="restTime"
            app:title="@string/default_rest_time"
            android:inputType="numberDecimal"
            android:defaultValue="90" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/units_header">
        <SwitchPreferenceCompat
            app:key="internationalSystem"
            app:title="@string/international_system_title"
            app:summaryOff="@string/international_system_off"
            app:summaryOn="@string/international_system_on"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="conversionExactValue"
            app:title="@string/exact_value_title"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <EditTextPreference
            app:key="conversionStep"
            app:title="@string/value_step_title"
            android:inputType="numberDecimal"
            android:defaultValue="1"
            android:dependency="conversionExactValue" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization_header">
        <SwitchPreferenceCompat
            app:key="nightTheme"
            app:title="@string/night_theme_title"/>

        <ListPreference
            app:key="exercisesSortLastUsed"
            app:title="@string/exercise_sorting_title"
            app:entries="@array/exercise_sort_entries"
            app:entryValues="@array/exercise_sort_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="alphabetically" />

        <ListPreference
            app:key="trainingBitsSort"
            app:title="@string/training_bits_sorting_title"
            app:isPreferenceVisible="false"
            app:entries="@array/training_bit_sort_entries"
            app:entryValues="@array/training_bit_sort_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="chronologically" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/permissions_header">
        <ListPreference
            app:key="logDeletion"
            app:title="@string/ability_remove_logs"
            app:entries="@array/permission_1p0_entries"
            app:entryValues="@array/permission_1p0_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="prompt" />

        <ListPreference
            app:key="exerciseDeletion"
            app:title="@string/ability_remove_exercises"
            app:entries="@array/permission_p0_entries"
            app:entryValues="@array/permission_p0_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="prompt" />

    </PreferenceCategory>

</PreferenceScreen>
