<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/optionNone"
        android:icon="@drawable/ic_man_24dp"
        android:title="@string/type_none"/>

    <item
        android:id="@+id/optionDumbbell"
        android:icon="@drawable/ic_dumbbell_24dp"
        android:title="@string/type_dumbbell"/>

    <item
        android:id="@+id/optionBarbell"
        android:icon="@drawable/ic_barbell_24dp"
        android:title="@string/type_barbell"/>

    <item
        android:id="@+id/optionPlate"
        android:icon="@drawable/ic_plate_24dp"
        android:title="@string/type_plate"/>

    <item
        android:id="@+id/optionPulley"
        android:icon="@drawable/ic_pulley_24dp"
        android:title="@string/type_pulley"/>

    <item
        android:id="@+id/optionSmith"
        android:icon="@drawable/ic_smith_24dp"
        android:title="@string/type_smith"/>

    <item
        android:id="@+id/optionMachine"
        android:icon="@drawable/ic_machine_24dp"
        android:title="@string/type_machine"/>

    <item
        android:id="@+id/optionCardio"
        android:icon="@drawable/ic_person_running_24dp"
        android:title="@string/type_cardio"/>
</menu>