<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/list_text_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/text_time" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/text_weight"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/text_reps"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/text_notes"/>

</LinearLayout>
