<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/hashColumn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/symbol_hash"
        android:textSize="@dimen/slightly_smaller_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/text_time"
        android:textSize="@dimen/slightly_smaller_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/text_weight"
        android:textSize="@dimen/slightly_smaller_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/text_reps"
        android:textSize="@dimen/slightly_smaller_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/text_notes"
        android:textSize="@dimen/slightly_smaller_text" />

</LinearLayout>