<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_left_24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground" />

        <LinearLayout
            android:id="@+id/monthView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:gravity="center">

            <TextView
                android:id="@+id/monthName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="@dimen/slightly_bigger_text"
                android:text="@string/month_january" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/slightly_bigger_text"
                android:paddingStart="@dimen/list_text_margin"
                android:paddingEnd="@dimen/none"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_right_24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_monday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_tuesday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_wednesday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_thursday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_friday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_saturday_short" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/day_sunday_short" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/weeks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

</LinearLayout>
