<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/list_text_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_substract_24dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_from"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_yyyymmdd"
                android:paddingHorizontal="6dp"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_to"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_yyyymmdd"
                android:paddingHorizontal="6dp"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/text_subtitle"
            android:textSize="@dimen/slightly_smaller_text"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>
</LinearLayout>